public interface InputOutputService {
    void targetplan();
    void finalreport();
    void showDiet();
    void showRoutine();
}

//이건 우리 User가 추상 클래스라 인터페이스 사용하려고 만든건데 나중에 설명해줄게용
